[tool.poetry]
name = "b.o.b.a."
version = "0.1.0"
description = "Discord DJ Bot"
authors = ["talia #0266"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
discord = "^1.7.3"
Flask = "^2.0.2"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
